Bash script compatible sans CUDA