@@ -122,7 +122,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmArgs>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArgs>
+                    <jvmArgs>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --enable-native-access=ALL-UNNAMED
+                    </jvmArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -268,7 +271,6 @@
                 <quarkus.native.enabled>true</quarkus.native.enabled>
             </properties>
         </profile>
-
         <profile>
             <id>build-gpu</id>
             <activation>
@@ -302,6 +304,5 @@
                 </plugins>
             </build>
         </profile>
-
     </profiles>
 </project>
